# COMP-ORGproject1

./: CMakeLists.txt
src/: cpu.cpp  cpu.h  gui.cpp  gui.h  instruction_decoder.cpp  instruction_decoder.h  main.cpp  memory.cpp  memory.h  register_file.cpp  register_file.h
